compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_stringn_ty_wrong_size_too_big.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : string(256)"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of string_n Fixed(Unevaluated(PackageId(3072), BodyId(0)))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:16..19: invalid character count size
| error for src/main.t:16..19: computed count is 256
| info: valid sizes are between 1 to 255
