compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_stringn_ty_wrong_value_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type k : int type _ : string(k)"
---
"k"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"_"@(FileId(1), 18..19) [Type]: alias[DefId(PackageId(0), LocalDefId(1))] of string_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 29..30): cannot use `k` as an expression
| error for (FileId(1), 29..30): `k` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `k` declared here
