compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_as_expr_bare.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function key : int end key\nvar res := key\n"
---
"key"@"src/main.t:9..12" [Subprogram(Function)]: function -> int
"res"@"src/main.t:31..34" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
