compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_on_undecl.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "% pass through, since we can't say anything about this\nno_compile"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
