compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_decl_sized_return.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function sha : int end sha"
---
"sha"@"src/main.t:9..12" [Subprogram(Function)]: function -> int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
