compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_result_ty_normal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function tree : int end tree"
---
"tree"@"src/main.t:9..13" [Subprogram(Function)]: function -> int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
