compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_bare_function.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "function a : int end a"
---
"a"@(FileId(1), 9..10) [Subprogram(Function)]: function -> int
"<root>"@(dummy) [Module(No)]: <error>

