compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_ty_bare_procedure.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : procedure"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of procedure -> void
"<root>"@(dummy) [Module(No)]: <error>

